--- a/drivers/iio/dac/Kconfig
+++ b/drivers/iio/dac/Kconfig
@@ -81,6 +81,15 @@ config AD5360
 	  To compile this driver as module choose M here: the module will be called
 	  ad5360.
 
+config ADMX100X
+	tristate "Analog Devices ADMX100X driver"
+	depends on SPI
+	help
+	  Say yes here to build support for Analog Devices ADMX100X.
+
+	  To compile this driver as a module, choose M here: the
+	  module will be called admx100x.
+
 config AD5380
 	tristate "Analog Devices AD5380/81/82/83/84/90/91/92 DAC driver"
 	depends on (SPI_MASTER && I2C!=m) || I2C
