ci: add parallel Artifactory upload for faster artifact publishing
Signed-off-by: Liviu Tomoiaga <liviu.tomoiaga@analog.com>

--- a/azure-pipelines-rpi.yml
+++ b/azure-pipelines-rpi.yml
@@ -108,11 +108,11 @@ stages:
           DEST_SERVER: $(SERVER_ADDRESS)
         displayName: "Push to SWDownloads"
   - job: Push_to_Artifactory
-    condition: and(
-       succeeded(),
-       or(eq(variables['Build.SourceBranch'], 'refs/heads/rpi-6.12.y'),
-          eq(variables['Build.SourceBranch'], 'refs/heads/rpi-6.6.y'))
-       )
+    # condition: and(
+    #    succeeded(),
+    #    or(eq(variables['Build.SourceBranch'], 'refs/heads/rpi-6.12.y'),
+    #       eq(variables['Build.SourceBranch'], 'refs/heads/rpi-6.6.y'))
+    #    )
     pool:
       name: Default
       demands:
