.github: pr-closed: Fix python call
Python-is-not-python3, change python to python3.
Fixes: 32541cfbe051 ("CI: Add permissions to pr_closed workflow")

Signed-off-by: Jorge Marques <jorge.marques@analog.com>

--- a/.github/workflows/pr-closed.yml
+++ b/.github/workflows/pr-closed.yml
@@ -33,7 +33,7 @@ jobs:
         curl -sO -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
         https://raw.githubusercontent.com/analogdevicesinc/wiki-scripts/main/utils/cloudsmith_utils/cloudsmith_helper.py
         
-        python cloudsmith_helper.py \
+        python3 cloudsmith_helper.py \
           --repo sdg-linux \
           --method remove_item_from_location \
           --package_version "^linux/PRs/.*/pr_${{ github.event.number }}/" \
