CI: Fix Cloudsmith wildcard syntax in pr-closed workflow
Signed-off-by: Liviu Tomoiaga <Liviu.Tomoiaga@analog.com>

--- a/.github/workflows/pr-closed.yml
+++ b/.github/workflows/pr-closed.yml
@@ -40,5 +40,5 @@ jobs:
         python3 cloudsmith_helper.py \
           --repo sdg-linux \
           --method remove_item_from_location \
-          --package_version "^linux/PRs/.*/pr_${{ github.event.number }}/" \
+          --package_version "*/pr_${{ github.event.number }}/" \
           --package_name "*"
