--- a/arch/arm/configs/zynq_sharkbyte_defconfig
+++ b/arch/arm/configs/zynq_sharkbyte_defconfig
@@ -5,7 +5,7 @@ CONFIG_PREEMPT=y
 CONFIG_IKCONFIG=y
 CONFIG_IKCONFIG_PROC=y
 CONFIG_LOG_BUF_SHIFT=15
-CONFIG_CGROUPS=y
+CONFIG_CGROUPS=yf
 CONFIG_BLK_DEV_INITRD=y
 # CONFIG_RD_BZIP2 is not set
 # CONFIG_RD_LZMA is not set
@@ -124,7 +124,6 @@ CONFIG_USB_NET_RNDIS_HOST=y
 # CONFIG_WLAN_VENDOR_ATH is not set
 # CONFIG_WLAN_VENDOR_ATMEL is not set
 # CONFIG_WLAN_VENDOR_BROADCOM is not set
-# CONFIG_WLAN_VENDOR_CISCO is not set
 # CONFIG_WLAN_VENDOR_INTEL is not set
 # CONFIG_WLAN_VENDOR_INTERSIL is not set
 # CONFIG_WLAN_VENDOR_MARVELL is not set
@@ -233,6 +232,7 @@ CONFIG_XILINX_XADC=y
 CONFIG_ONE_BIT_ADC_DAC=y
 CONFIG_CF_AXI_DDS=y
 CONFIG_ADI_IIO_FAKEDEV=y
+CONFIG_CF_AXI_ADC=y
 CONFIG_FPGA=y
 CONFIG_FPGA_MGR_ZYNQ_FPGA=y
 CONFIG_EXT4_FS=y
@@ -247,7 +247,6 @@ CONFIG_JFFS2_COMPRESSION_OPTIONS=y
 CONFIG_NLS_CODEPAGE_437=y
 CONFIG_NLS_ASCII=y
 CONFIG_NLS_ISO8859_1=y
-CONFIG_CRYPTO_ECB=y
 CONFIG_CRYPTO_MICHAEL_MIC=y
 CONFIG_DMA_CMA=y
 CONFIG_CMA_SIZE_MBYTES=256
