drivers: iio: adc: Update AD7768 driver
Add regmap support

Support additional devicetree properties

Support additional IIO attributes

Update sampling frequency to be a channel specific attribute

Signed-off-by: Janani Sunil <janani.sunil@analog.com>

--- a/drivers/iio/adc/Kconfig
+++ b/drivers/iio/adc/Kconfig
@@ -382,6 +382,20 @@ config AD7766
 	  To compile this driver as a module, choose M here: the module will be
 	  called ad7766.
 
+config AD7768
+	tristate "Analog Devices AD7768 ADC driver"
+	depends on SPI_MASTER
+	depends on ADI_AXI_ADC
+	select IIO_BUFFER
+	select IIO_TRIGGERED_BUFFER
+	select REGMAP_SPI
+	help
+	  Say yes here to build support for Analog Devices AD7768 and AD7768-4
+	  SPI analog to digital converters.
+
+	  To compile this driver as a module, choose M here: the module will be
+	  called ad7768.
+
 config AD7768_1
 	tristate "Analog Devices AD7768-1 ADC driver"
 	depends on SPI
@@ -547,6 +561,7 @@ config ADI_AXI_ADC
 	select IIO_BUFFER_HW_CONSUMER
 	select IIO_BUFFER_DMAENGINE
 	select REGMAP_MMIO
+	select REGMAP_SPI
 	select IIO_BACKEND
 	help
 	  Say yes here to build support for Analog Devices Generic
