--- a/Documentation/devicetree/bindings/soc/adi/adi,system-event-controller.yaml
+++ b/Documentation/devicetree/bindings/soc/adi/adi,system-event-controller.yaml
@@ -29,6 +29,10 @@ properties:
     $ref: /schemas/types.yaml#/definitions/uint32
     description: Number of SHARC cores available
 
+  "no-reset":
+    description: Prevents resetting the SEC to preserve SHARC interrupts
+    type: boolean
+
 required:
   - compatible
   - reg
