.github: checks: Fix check_assert_defconfigs
Was still using upper-case inputs. Also, use yq for parsing to ensure
correct extraction

Signed-off-by: Jorge Marques <jorge.marques@analog.com>

--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -104,10 +104,12 @@ jobs:
     - name: Check defconfigs
       if: ${{ !cancelled() && env.fatal != 'true' }}
       run: |
+        command -v yq || exit 0
         # Collect all defconfigs mentioned in the top-level and look for changes
-        configs=($(awk '/ARCH:/{arch=$2} /DEFCONFIG:/{print arch "/" $2}' \
-                   .github/workflows/top-level.yml | \
-                 sed 's/"//g'))
+        configs="$(yq -r '.jobs[]
+                    | select(.uses == "analogdevicesinc/linux/.github/workflows/build.yml@*")
+                    | "\(.with.arch) \(.with.defconfig)"
+                  ' .github/workflows/top-level.yml)"
         source ./ci/build.sh
         check_assert_defconfigs ${configs[@]}
 
