--- a/arch/arm/configs/zynq_sharkbyte_defconfig
+++ b/arch/arm/configs/zynq_sharkbyte_defconfig
@@ -253,3 +253,7 @@ CONFIG_DMA_CMA=y
 CONFIG_CMA_SIZE_MBYTES=256
 CONFIG_DEBUG_FS=y
 CONFIG_RCU_CPU_STALL_TIMEOUT=60
+CONFIG_MMC=y
+CONFIG_MMC_SDHCI=y
+CONFIG_MMC_SDHCI_PLTFM=y
+CONFIG_MMC_SDHCI_OF_ARASAN=y
