ada4356: Add IIO wrapper for TDD
Signed-off-by: Pop Ioan Daniel <pop.ioan-daniel@analog.com>

--- a/arch/arm/configs/zynq_xcomm_adv7511_defconfig
+++ b/arch/arm/configs/zynq_xcomm_adv7511_defconfig
@@ -216,6 +216,7 @@ CONFIG_COMMON_CLK_AXI_CLKGEN=y
 CONFIG_MEMORY=y
 CONFIG_AXI_JESD204B=y
 CONFIG_ADI_AXI_TDD=y
+CONFIG_ADI_IIO_FAKEDEV=y
 CONFIG_FPGA=y
 CONFIG_FPGA_MGR_ZYNQ_FPGA=y
 CONFIG_FPGA_MGR_ZYNQ_AFI_FPGA=y
