iio: adc: adrv903x: suppress build warnings for vendor API files
Suppress build warnings in vendor API files that trigger errors with -Werror:

1. Increase frame size warning threshold to 2048 bytes for vendor API
   files that use large stack buffers for CPU communication and file I/O.
   These functions exceed the default 1024 byte limit but are not
   performance critical.

2. Suppress format warnings in vendor error handling code that uses
   C standard PRIu32/PRIx32 macros incompatible with kernel printk
   format checking.

Files changed:
- drivers/iio/adc/adrv903x/Makefile

Signed-off-by: Stefan Popa <stefan.popa@analog.com>

--- a/drivers/iio/adc/adrv903x/Makefile
+++ b/drivers/iio/adc/adrv903x/Makefile
@@ -68,5 +68,13 @@ ccflags-y += -I$(srctree)/$(src)/devices/adrv903x/private/include/ \
 	-DADRV903X_BITFIELD_VALUE_CHECK=0 \
 	-Wno-error=missing-prototypes
 
+# Suppress frame size warnings for vendor API files with large stack buffers
+CFLAGS_devices/adrv903x/public/src/adi_adrv903x_cpu.o := -Wframe-larger-than=2048
+CFLAGS_devices/adrv903x/public/src/adi_adrv903x_cals.o := -Wframe-larger-than=2048
+CFLAGS_devices/adrv903x/public/src/adi_adrv903x_utilities.o := -Wframe-larger-than=2048
+
+# Suppress format warnings for vendor error handling (uses C standard PRIx32 macros incompatible with printk)
+CFLAGS_common/adi_error/adi_common_error.o := -Wno-format
+
 obj-$(CONFIG_ADRV903X) += adrv903x_drv.o
 
