arm: socfpga_defconfig: enable I2C_DESIGNWARE_CORE and I2C_DESIGNWARE_PLATFORM
On the DE10-Nano using the CN0540 and CN0579 boards,
the I2C devices don't probe.Enabling I2C_DESIGNWARE_CORE
and I2C_DESIGNWARE_PLATFORM ensures that the I2C controller
driver is built and the devices probe correctly.

Signed-off-by: PopPaul2021 <paul.pop@analog.com>

--- a/arch/arm/configs/socfpga_adi_defconfig
+++ b/arch/arm/configs/socfpga_adi_defconfig
@@ -81,6 +81,8 @@ CONFIG_SERIAL_8250_NR_UARTS=2
 CONFIG_SERIAL_8250_RUNTIME_UARTS=2
 CONFIG_SERIAL_8250_DW=y
 CONFIG_I2C_CHARDEV=y
+CONFIG_I2C_DESIGNWARE_CORE=y
+CONFIG_I2C_DESIGNWARE_PLATFORM=y
 CONFIG_SPI_ALTERA=y
 CONFIG_SPI_CADENCE_QUADSPI=y
 CONFIG_SPI_DESIGNWARE=y
