--- a/arch/arm64/boot/dts/xilinx/versal-vck190-reva-ad9084.dts
+++ b/arch/arm64/boot/dts/xilinx/versal-vck190-reva-ad9084.dts
@@ -706,8 +706,8 @@
 		reset-gpios = <&axi_gpio 30 0>;
 		//adi,gpio-exports = /bits/ 8 <15 16 17 18 19 20 21 22 23>; // <block, hop>
 
-		/* Indicate FPGA sequencer trig_out to Apollo GPIO trigger pins */
-		adi,fsrc-gpio-trig;
+		/* Indicate FPGA sequencer trig_out to Apollo GPIO trigger */
+		// adi,fsrc-gpio-trig;
 
 #if WITH_AION
 #if WITH_FSRC
