--- a/arch/arm/boot/dts/adi/sc589-mini.dts
+++ b/arch/arm/boot/dts/adi/sc589-mini.dts
@@ -146,17 +146,17 @@
 		};
 
 		partition@2 {
-			label = "uboot env";
+			label = "DTB";
 			reg = <0xd0000 0x10000>;
 		};
 
 		partition@3 {
-			label = "kernel (spi)";
+			label = "Kernel";
 			reg = <0x00e0000 0x0800000>;
 		};
 
 		partition@4 {
-			label = "root file system (spi)";
+			label = "Rootfs";
 			reg = <0x08e0000 0x3720000>;
 		};
 	};
