--- a/arch/arm/boot/dts/adi/sc594-som.dtsi
+++ b/arch/arm/boot/dts/adi/sc594-som.dtsi
@@ -184,18 +184,18 @@
 		};
 
 		qspi_2: partition@2 {
-			label = "U-Boot Environment";
-			reg = <0x100000 0x20000>;
+			label = "DTB";
+			reg = <0x00100000 0x00010000>;
 		};
 
 		qspi_3: partition@3 {
-			label = "FIT Image";
-			reg = <0x120000 0xF00000>;
+			label = "Kernel";
+			reg = <0x00110000 0x02000000>;
 		};
 
 		qspi_4: partition@4 {
-			label = "JFFS2 Formatted RFS";
-			reg = <0x1020000 0x2FE0000>;
+			label = "Rootfs";
+			reg = <0x02110000 0x05EF0000>;
 		};
 
 	};
@@ -240,18 +240,18 @@
 			};
 
 			ospi_2: partition@2 {
-				label = "U-Boot Environment";
-				reg = <0x100000 0x20000>;
+				label = "DTB";
+				reg = <0x100000 0x10000>;
 			};
 
 			ospi_3: partition@3 {
-				label = "FIT Image";
-				reg = <0x120000 0xF00000>;
+				label = "Kernel";
+				reg = <0x110000 0x2000000>;
 			};
 
 			ospi_4: partition@4 {
-				label = "JFFS2 Formatted RFS";
-				reg = <0x1020000 0xFE0000>;
+				label = "Rootfs";
+				reg = <0x02110000 0x05FE0000>;
 			};
 		};
 	};
