--- a/arch/arm64/boot/dts/adi/sc598-som-revD.dtsi
+++ b/arch/arm64/boot/dts/adi/sc598-som-revD.dtsi
@@ -109,12 +109,12 @@
 
 			qspi_3@110000 {
 				label = "kernel";
-				reg = <0x00110000 0x02000000>;
+				reg = <0x00110000 0x00F00000>;
 			};
 
 			qspi_4@2110000 {
 				label = "rootfs";
-				reg = <0x02110000 0x01EF0000>;
+				reg = <0x01010000 0x02FF0000>;
 			};
 		};
 	};
