Containerfile: remove yq until old go version
Remove old, unsafe bundled version of go with yq.
This reverts commit 28638a6c08f4af0608d8f4592c131db0e8cf7634.

Signed-off-by: Jorge Marques <jorge.marques@analog.com>

--- a/container/Containerfile
+++ b/container/Containerfile
@@ -8,7 +8,7 @@ ARG gh_actions_runner_sh=https://raw.githubusercontent.com/analogdevicesinc/doct
 
 RUN zypper update -y
 RUN zypper install -y --no-recommends \
-    tar unzip gzip curl jq yq libicu coreutils
+    tar unzip gzip curl jq libicu coreutils
 
 RUN useradd -m runner
 WORKDIR /home/runner
